partially updated lingo

--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61f_syncproject.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61f_syncproject.htm
@@ -36,9 +36,10 @@ In the Navigator view select the project JanesTeamProject.</P>
 2.</b>
 </P>
 </TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
-From the project's context menu choose Team &gt; Synchronize with Stream</P>
+    <TD valign="top" align="left"> 
+      <P CLASS="Para">From the project's context menu choose Team &gt; Share Project. 
+        If you have more than one repository provider installed, pick CVS. her 
+        own report of aSelect the location we created previously.</P>
 </TD>
 </TR>
 <TR>
@@ -48,21 +49,9 @@ From the project's context menu choose Team &gt; Synchronize with Stream</P>
 3.</b>
 </P>
 </TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
-Since this is the first time synchronizing the project we will need to specify
-the repository location for our project.</P>
-<P CLASS="Para">
-In the Set Project Sharing dialog:</P>
-<UL CLASS="UnorderedList">
-<LI CLASS="Item">
-In the Repositories list, select the desired repository location.</LI>
-<LI CLASS="Item">
-In the Streams list, select HEAD.&nbsp;</LI>
-</UL>
-<p>It is possible to
-create additional CVS streams but for the purpose of this tutorial we will use
-the HEAD stream.</p>
+    <TD valign="top" align="left"> 
+      <P CLASS="Para"> From the project's context menu choose Team &gt; Synchronize 
+        with Repository.</P>
 <blockquote>
   <p><img align="texttop" border="0" src="../images/Image82_repo_sync1.jpg" width="408" height="422"></p>
 </blockquote>
