Update 1.0 "components" to 2.0 "features"

--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-25.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-25.htm
@@ -10,13 +10,36 @@
 <H1 CLASS="Head" dir="ltr">
 Features</H1>
 
-<p CLASS="Para">Independent Software Vendors (ISVs) add function to the
-workbench by delivering <i>features</i>, which are a mechanism for grouping plug-ins.  Features, and thus all of their plug-ins, 
-can be installed and uninstalled.  Simple tools may consist of only one plug-in,
-while complex tools may require many.
-</p>
+<p>On disk, an Eclipse-based product is structured as a collection of <b>plug-ins</b>.
+Each plug-in contains the code that provides some of the product's
+functionality. The code and other files for a plug-in are installed on the local
+computer, and get activated automatically as required. A product's plug-ins are
+grouped together into features. A <b>feature</b> is the smallest unit of separately downloadable and installable
+functionality. (The notion of a feature is new for Eclipse 2.0; it replaces the similar
+notion of component in Eclipse 1.0.) </p>
+<p>The fundamentally modular nature of the Eclipse platform makes it easy for
+the user to install additional features and plug-ins into an Eclipse-based
+product, and to update the product's existing features and plug-ins. The user
+can do either using traditional native installers running separate from Eclipse,
+or using the Eclipse platform's own update manager. The Eclipse <b>update
+manager</b> can be used to discover, download, and install updated features and
+plug-ins from special web-based Eclipse update sites.</p>
+<p>The basic underlying mechanism is simple enough: the files for a feature or
+plug-in are always stored in a subdirectory whose name includes a version
+identifier (e.g., &quot;2.0.0&quot;); different versions of a feature or plug-in
+are always given different version identifiers, thereby ensuring that the
+multiple versions of the same feature or plug-in can co-exist side by side on
+disk. This means that installing or updating features and plug-ins requires
+adding more files, but never requires deleting or overwriting existing files.
+Once the files are installed on the local computer, the new feature and plug-in
+versions are available to be configured. The same installed base of files is
+therefore capable of supporting many different <b>configurations</b>
+simultaneously; installing and upgrading an existing product are reduced to
+formulating a configuration incrementally better than the current one. Important
+configurations can be saved for posterity, and restored to active service in the
+event of an unsuccessful upgrade.</p>
 
-<p CLASS="Para">The <b>About</b> item on the <b>Help</b> menu provides information about installed features and plug-ins. 
+<p>The <b>About</b> item on the <b>Help</b> menu provides information about installed features and plug-ins. 
 The <b>Software Updates</b> submenu on the <b>Help</b> menu groups together items for updating existing features, and 
 for finding, downloading, and installing new features.
 </p>
@@ -25,14 +48,14 @@ for finding, downloading, and installing new features.
 <P><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
 <a href="concepts-2.htm">Workbench</a></P>
 
-
-<P><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-<a href="../tasks/tasks-34.htm">Installing features</a><br>
-<a href="../tasks/tasks-33.htm">Managing features</a><br>
-<a href="../tasks/tasks-35.htm">Removing features</a><br>
-<a href="../tasks/tasks-36.htm">Updating features</a><br>
-<a href="../tasks/tasks-37.htm">Reverting to previously installed features</a><br>
-<a href="../tasks/tasks-38.htm">Specifying the number of installation histories</a><br>
+<P>
+<img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
+<br><a href="tasks-33.htm">Inspecting the current configuration</a>
+<br><a href="tasks-34.htm">Installing new features with the update manager</a>
+<br><a href="tasks-35.htm">Picking up pending changes</a>
+<br><a href="tasks-36.htm">Updating Eclipse with the update manager</a>
+<br><a href="tasks-37.htm">Saving a configuration</a>
+<br><a href="tasks-38.htm">Restoring a saved configuration</a>
 </P>
 
 <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0"></a>
