--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-34.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-34.htm
@@ -4,61 +4,71 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Installing components</title>
+<title>Installing new features with the update manager</title>
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Installing components</H1>
-<P>
-To install a new component in the workbench:</P>
+<H1>Installing new features with the update manager</H1>
+
+<p>To locate and install a new feature into a product (ordinarily requires web
+access):</p>
 <ol>
-  <li>
-Click <b>Help</b> &gt; <b>Software Updates</b>. The Software Updates window 
-opens.</li>
-  <li>
-
-Click <b>Add</b>.&nbsp; The New Components Installation page opens.&nbsp;&nbsp;
-  </li>
-  <li>
-
-In the <b>Location</b> field, enter a valid location from which workbench components
-can be obtained.&nbsp; (For example: <samp>http://siteaddr.domain/updates</samp>.)
-Optionally, add a description for the location in the <b>Description</b> field. 
-  </li>
-  <li>
-
-Click <b>Add</b> to add the location to the list, then click <b>Next</b>. 
-  </li>
-  <li>
-
-From the list of components, select one or more components to install and click <b>Next</b>. A page listing the components displays.
-  </li>
-  <li>
-
-Click <b>Finish</b> on the wizard, then click <b>Finish</b> when the 
-installation completion page is displayed.
-  </li>
-  <li>
-
-Click <b>OK</b> to close the Software Updates page.
-  </li>
-  <li>
-
-Exit and restart the workbench to complete the install.
-  </li>
+  <li>Open the main update manager by clicking <b>Help</b> &gt; <b>Software Updates</b> &gt;
+    <b>Update Manager</b>. This opens the update manager perspective.</li>
+  <li>Create a bookmark for a web site where Eclipse features and plug-ins are
+    published. In the Feature Updates view, use the view's context menu <b>New</b>
+    &gt; <b>Site Bookmark</b>.</li>
+  <li>In the New Site Bookmark dialog that opens, give the site a name such as
+    &quot;CompanyA&quot; and enter the URL such as &quot;<a href="http://com.example.companyA/eclipseupdates">http://com.example.companyA/eclipseupdates</a>&quot;.</li>
+  <li>Expand the newly created item in Feature Updates view to show the
+    categories of feature versions available at that update site. This will
+    contact the web site to discover what features are available.</li>
+  <li>Expand one of the top-level category and select a feature. Information
+    about that feature is appears in the Preview view.</li>
+  <li>After selecting the feature to be added, click the <b>Install</b> button
+    within the Preview view.</li>
+  <li>The Feature Install wizard confirms the details of the feature you are
+    about to install. Click <b>Next</b>.</li>
+  <li>Carefully review the license agreements for the upgraded features. If the
+    terms of all these licenses are acceptable, check &quot;I accept the terms
+    in the license agreements&quot;. Do not proceed to download the features if
+    the license terms are not acceptable.</li>
+  <li>The Install Location page controls where the new feature's files are to be
+    installed on the local computer. Select the directory into which the product
+    is installed and hit <b>Next</b>. (If the product is installed in a
+    directory to which you do not have write access, you should contact your
+    system administrator and get them to install this feature so that it will be
+    generally available. The other option is to click <b>Add</b> and point to a
+    directory to which you do have write access; however, feature installed
+    there are only available when using the current workspace.)</li>
+  <li>Feature versions can be digitally signed by the company that provides
+    them. This allows the user to verify more easily that the features and
+    plug-ins that are about to be downloaded and installed are coming from a
+    trusted supplier. <i>Warning: Because of the possibility of harmful or even
+    malicious plug-ins, users should only download features from parties that
+    they trust</i>. Click <b>Install</b> to allow the downloading and installing
+    to proceed.</li>
+  <li>Once the new feature and plug-ins have been downloaded successfully and
+    their files installed into the product on the local computer, a new
+    configuration that incorporates these features and plug-ins will be
+    formulated. Click <b>Yes</b> when asked to exit and restart the workbench for the
+    changes to take effect. To add other new features at the same time before
+    restarting, click <b>No</b> and repeat.</li>
 </ol>
 
 
-<P><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><a href="../concepts/concepts-25.htm"><br>
-Components
-</a></P>
+<P>
+<img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
+<br><a href="../concepts/concepts-25.htm">Features</a>
+</P>
 
-
-<P><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="tasks-34.htm"><br>
-</a><a href="tasks-33.htm">Managing components</a><a href="tasks-35.htm"><br>
-Removing components</a><a href="tasks-36.htm"><br>
-</a><a href="tasks-38.htm">Specifying the number of installation histories</a></P>
+<P>
+<img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
+<br><a href="tasks-33.htm">Inspecting the current configuration</a>
+<br><a href="tasks-36.htm">Updating Eclipse with the update manager</a>
+<br><a href="tasks-37.htm">Saving a configuration</a>
+<br><a href="tasks-38.htm">Restoring a saved configuration</a>
+</P>
 
 <p>&nbsp;<br>
 <a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
