--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-49.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-49.htm
@@ -19,7 +19,7 @@ To display the various properties of a workbench resource:</P>
     <p CLASS="Para">Select <b>Properties</b> from the pop-up menu.</li>
 </ol>
 <P CLASS="Para">The kinds of properties that are displayed depend on the
-specific resource you selected and the components that are installed into the
+specific resource you selected and the features and plug-in that are installed into the
 workbench.</P>
 <P CLASS="Para">You can also see basic properties for a resource by clicking <b>Perspective
 &gt; Show View &gt; Other &gt; Basic &gt; Properties</b>, when the resource is
