--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-35.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-35.htm
@@ -4,40 +4,47 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Removing components</title>
+<title>Picking up pending changes</title>
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head" dir="ltr">
-Removing components</H1>
-<P CLASS="Para">
-To remove an installed component from the workbench:</P>
+<H1>Picking up pending changes</H1>
+
+<p>Whenever the Eclipse
+platform is started it detects and notes any changes that have been made to the installed base of files
+such as the appearance (or disappearance) of
+feature and plug-in versions. New or updated features are not automatically configured
+for an existing workspace; rather, the user is told on start up that there are
+updates and given the opportunity to configure them. If accepted, the new and
+updated feature versions become a part of the feature and plug-in configuration
+used for that workspace. If not accepted, the new and updated feature versions
+remain dormant (disabled) for that workspace, but available to be picked up at a later
+time.</p>
 <ol>
-  <li>
-Click <b>Help</b> &gt; <b>Software Updates</b>. The Software Updates page opens.
-  </li>
-  <li>
-Select the component you want to remove from the list and click <b>Remove</b>.
-  </li>
-  <li>
-Click <b>OK</b> to close the Software Updates page.
-  </li>
-  <li>
-Exit and restart the workbench to complete the install.
-  </li>
+  <li>Click <b>Yes</b> when informed of updates and prompted to enter the update
+    manager. Or click <b>Help</b> &gt; <b>Software Updates</b> &gt; <b>Pending
+    Changes</b>.<br>
+    The Configuration Changes page opens showing a list of detected changes.</li>
+  <li>Select and expand detected change items to see the associated feature
+    versions.</li>
+  <li>Check items that are to be included in the configuration. Unchecked items
+    are ignored (but remain pending).</li>
+  <li>Click <b>Finish</b>  to update the configuration, or <b>Cancel</b> to
+    retain the current configuration (pending changes remain pending).</li>
+  <li>Click <b>Yes</b> when asked to exit and restart the workbench for the
+    changes to take effect.</li>
 </ol>
 
+<P>
+<img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
+<br><a href="../concepts/concepts-25.htm">Features</a>
+</P>
 
-<P><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><a href="../concepts/concepts-25.htm"><br>
-Components
-</a></P>
-
-
-<P><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="tasks-34.htm"><br>
-</a><a href="tasks-33.htm">Managing components</a><a href="tasks-35.htm"><br>
-</a><a href="tasks-37.htm">
-Reverting to previously installed components
-</a></P>
+<P>
+<img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
+<br><a href="tasks-36.htm">Updating Eclipse with the update manager</a>
+<br><a href="tasks-38.htm">Restoring a saved configuration</a>
+</P>
 
 <p>&nbsp;<br>
 <a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
