--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-36.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-36.htm
@@ -4,75 +4,52 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Updating Components</title>
+<title>Updating Eclipse with the update manager</title>
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Updating components</H1>
-<P CLASS="Para">
-There are two ways to update components installed in
-the workbench.&nbsp; You can choose to update one or more selected components,
-or you can update all the installed components.&nbsp; To update components installed
-in the workbench:</P>
+
+<h1>Updating Eclipse with the update manager</h1>
+<p>To check to see whether there are updates for a product's existing features
+(requires web access):</p>
 <ol>
-  <li>
-Click <b>Help</b> &gt; <b>Software Updates</b>. The Software Updates page opens.
-  </li>
-  <li>
-
-Select one of the <b>Update</b> buttons to open the New Component Updates page.
-  </li>
-  <li type="a" value="1">
-<P CLASS="Para" style="margin-left: 25">
-To update one or more selected components, click <b>Update</b>.
-  </li>
-  <li type="a">
-<P CLASS="Para" style="margin-left: 25">
-To update all components, click <b>Update All</b>. 
-  </li>
-  <li>
-
-In the <b>Location</b> field, enter a valid location from which workbench 
-components can be obtained.&nbsp; (For example:
-<a href="http://siteaddr.domain/updates">http://siteaddr.domain/updates</a>.) Optionally, add a description for the location in the
-        <b>Description</b> field.
-  </li>
-  <li>
-
-Click <b>Add</b> to add the location to the list and then click <b>Next</b>. A 
-page displaying the components opens.
-  </li>
-  <li>
-
-Select one or more components to install and click <b>Next</b>.
-  </li>
-  <li>
-
-Click <b>Finish</b> on the wizard, and click <b>Finish</b> again when the installation 
-completion page appears.
-  </li>
-  <li>
-
-Click <b>OK</b> to close the Software Updates page.
-  </li>
-  <li>
-
-Exit and restart the workbench to complete the update.
-  </li>
+  <li>Click <b>Help</b> &gt; <b>Software Updates</b> &gt; <b>New Updates</b>.<br>
+    This will contact the web sites associated with the product's features to
+    discover what versions of those features are available. The potential
+    upgrades are presented in an Available Updates page.</li>
+  <li>Select the feature versions that you wish to upgrade, and click <b>Next</b>.</li>
+  <li>Carefully review the license agreements for the upgraded features. If the
+    terms of all these licenses are acceptable, check &quot;I accept the terms
+    in the license agreements&quot;. Do not proceed to download the features if
+    the license terms are not acceptable.</li>
+  <li>Feature versions can be digitally signed by the company that provides
+    them. This allows the user to verify more easily that the features and
+    plug-ins that are about to be downloaded and installed are coming from a
+    trusted supplier. <i>Warning: Because of the possibility of harmful or even
+    malicious plug-ins, users should only download features from parties that
+    they trust</i>. Click <b>Install</b> to allow the downloading and installing
+    to proceed.</li>
+  <li>Once all the features and plug-ins have been downloaded successfully and
+    their files installed into the product on the local computer, a new
+    configuration that incorporates these features and plug-ins will be
+    formulated. Click <b>Yes</b> when asked to exit and restart the workbench for the
+    changes to take effect.</li>
 </ol>
 
 
-<P><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><a href="../concepts/concepts-25.htm"><br>
-Components
-</a></P>
+<P>
+<img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
+<br><a href="../concepts/concepts-25.htm">Features</a>
+</P>
 
-
-<P><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="tasks-34.htm"><br>
-</a><a href="tasks-33.htm">Managing components</a><a href="tasks-35.htm"><br>
-</a><a href="tasks-37.htm">
-Reverting to previously installed components
-</a></P>
+<P>
+<img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
+<br><a href="tasks-33.htm">Inspecting the current configuration</a>
+<br><a href="tasks-34.htm">Installing new features with the update manager</a>
+<br><a href="tasks-35.htm">Picking up pending changes</a>
+<br><a href="tasks-37.htm">Saving a configuration</a>
+<br><a href="tasks-38.htm">Restoring a saved configuration</a>
+</P>
 
 <p>&nbsp;<br>
 <a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
