--- a/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_keyBindings.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_keyBindings.htm
@@ -54,7 +54,9 @@ Preferences dialog. </p>
 <p>Finally, plug-ins can define <b>accelerator scopes</b> which determine the
 lookup order for key bindings.</p>
 <p>This is all best understood by walking through the workbench and looking at
-how actions and accelerators are declared.</p>
+how actions and accelerators are declared.&nbsp; We'll look at all of this from
+the point of view of defining key bindings for existing actions.&nbsp; Then
+we'll review it all again from the user's point of view.</p>
 
 
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
