*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/jface_viewers.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/jface_viewers.htm
@@ -41,7 +41,7 @@ list, tree, table, and text widgets.&nbsp;</P>
 <P >
 Each viewer has an associated SWT widget. This widget can be created implicitly by supplying the parent
 <b> Composite</b> in a convenience viewer constructor, or explicitly by creating it first and supplying it to the viewer in its constructor.</P>
-<h4 >List-oriented viewers</h4>
+<h4 ><a name="listviewer">List-oriented viewers</a></h4>
 <P > Lists, trees, and tables share many common capabilities from a user's point of view, such as population with objects, selection, sorting, and filtering.&nbsp;</P>
 <P >These viewers keep
 a list of domain objects (called <b>elements</b>) and display them in their
