proof read pass, corrected/reduced links

--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-100d.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-100d.htm
@@ -33,12 +33,12 @@
   recursively descend into subfolders, adding those files it finds to version 
   control, provided the files have not been explicitly ignored.</p>
 <p CLASS="Para" Label="Type"><b>Tip:</b> When you create a new file in a CVS project, 
-  a new task is created to remind you of the fact that that file is neither ignored 
+  a task is created to remind you of the fact that that file is neither ignored 
   nor under version control. The &quot;Quick Fix&quot; menu for the task will 
   provide options for resolving it, such as either adding it to version control 
   or adding it to the list of ignored resources.</p>
 <p CLASS="Para" Label="Type"><b>Tip:</b> When committing files from the Synchronization 
-  View, if the selection either directly or recursively contains files which have 
+  view, if the selection either directly or recursively contains files which have 
   not been added to version control, you'll be prompted whether or not at that 
   time you want them added. This is a convenience function to help ensure that 
   you do not miss committing new resources which were unintentionally never added.</p>
@@ -50,18 +50,17 @@
     that match a certain filename pattern. For example, if you create a global 
     ignore for <samp>/bin</samp>, and any resource that matches &quot;bin&quot; 
     in any directory in the workspace will be ignored for version control. This 
-    preference can be found in <b>Window&gt;Preferences&gt;Team&gt;Ignored Resources</b>.</li>
+    preference can be found in <b>Window &gt; Preferences &gt; Team &gt; Ignored Resources</b>.</li>
   <li>Any resource marked as <i>derived</i> will be automatically ignored for 
     version management by Team CVS. Some builders, such as the Java builder, mark 
-    all of its build output (.class files, etc.) as derived.</li>
+    all of its build output (e.g. .class files) as derived.</li>
   <li>CVS supports the creation of a special <i>.cvsignore</i> file whose contents 
-    described which files to ignore for version management. This provides compatibility 
-    with the existing CVS ignore files and is used most often to ignore directories. 
+    describe which files to ignore for version management. This is used most often to ignore directories. 
     The .cvsignore file only applies the pattern to resources in the <i> same</i> 
     directory as the .cvsignore file itself. </li>
 </ol>
 <P CLASS="Para" Label=Type> <b>Tip</b>: Once a resource is under version control, 
-  it cannot easily be subsequentlyignored.&nbsp; This is why adding to version 
+  it cannot easily be subsequently ignored.  This is why adding to version 
   control is an explicit operation performed by you the user.</P>
 
 
@@ -72,7 +71,7 @@
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
 <a href="tasks-100d1.htm">Creating a global ignore pattern</a><br>
-<a href="tasks-100d2.htm">Authoring the CVS .ignore file</a><br>
+<a href="tasks-100d2.htm">Authoring the CVS .cvsignore file</a><br>
 <a href="tasks-114.htm">Committing</a><br>
   <a href="tasks-113.htm">Updating</a><br>
 </p>
