--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-100d2.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-100d2.htm
@@ -4,11 +4,11 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Authoring the CVS .ignore file</title>
+<title>Authoring the CVS .cvsignore file</title>
 <meta name="keyword" content="team">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">Authoring the CVS .ignore file</H1>
+<H1 CLASS="Head">Authoring the CVS .cvsignore file</H1>
 <P CLASS="Para" Label=Type>When committing resources, often there are resources 
   that you do not want to add to version control. One way you can do this is by 
   using the CVS &quot;ignore&quot; facility, which reads the contents of the file 
@@ -42,10 +42,6 @@ will be ignored.
 </P>
 
 
-<P>For more information, see <a href="http://www.cvshome.org" target="_blank">www.cvshome.org</a>
-</P>
-
-
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
 <a href="../concepts/concepts-26.htm">Team programming with CVS</a><br>
 </p>
@@ -54,6 +50,12 @@ will be ignored.
 <a href="tasks-115.htm">Synchronizing with the repository</a><br>
 <a href="tasks-100d.htm">Version control life cycle: adding and ignoring resources</a><br>
 <a href="tasks-100d1.htm">Creating a global ignore pattern</a>
+</p>
+
+
+
+<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
+<a href="http://www.cvshome.org/docs/manual/cvs_18.html#SEC175">www.cvshome.org: Ignoring files via cvsignore</a>
 </p>
 
 <p>&nbsp;<br>
