--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-101.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-101.htm
@@ -40,17 +40,14 @@ Comparing resources with repository versions</H1>
 </ol>
 
 <P CLASS="Intro"><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-  <a href="../concepts/concepts-31.htm">Comparison editors<br>
-  </a><a href="../concepts/concepts-29.htm">Three-way comparisons</a><br>
-  <a href="../concepts/concepts-30b.htm">Synchronize view<br>
-  </a> <a href="../concepts/concepts-30.htm"> Team synchronization</a>&nbsp; 
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="tasks-92.htm"><br>
-</a><a href="tasks-115.htm">
-Synchronizing with a stream<br>
-</a><a href="tasks-68dg.htm">Merging changes in the comparison editor</a><a href="tasks-113.htm"><br>
-</a><a href="tasks-113b.htm">
-Resolving conflicts and merging changes</a><a href="tasks-68b.htm"><br>
-Setting preferences for comparing files</a>&nbsp; <a href="../concepts/concepts-17a.htm"><br>
+  <a href="../concepts/concepts-31.htm">Comparison editors</a><br>
+  <a href="../concepts/concepts-29.htm">Three-way comparisons</a><br>
+ <a href="../concepts/concepts-30.htm">Synchronizing with a CVS repository</a>
+<p>
+
+<img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+<a href="tasks-115.htm">Synchronizing with the repository</a><br>
+<a href="tasks-68b.htm">Setting preferences for comparing files</a><br>
 </a></p>
 
 <p>&nbsp;<br>
