--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-107b.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-107b.htm
@@ -9,7 +9,7 @@
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head"> Enabling the CVS resource decorations</H1>
-<P CLASS="Para">When enable, CVS will decorate resources in workbench views with 
+<P CLASS="Para">When enabled, CVS will decorate resources in workbench views with 
   icon and label decorations that indicate the CVS state of the resource.</P>
 <P CLASS="Para"> To enable the CVS decorations: </P>
 <ol>
@@ -33,14 +33,14 @@
       to open the workbench Preferences dialog. 
   </li>
   <li>In the dialog, select the<b> Team &gt; CVS &gt; Label Decorations</b> preference 
-    page. This page allows the configuration of how decorations appear of CVS 
+    page. This page allows the configuration of how decorations appear on CVS 
     projects, folders and files.</li>
   <li>To configure the text label decorations: 
     <ol>
       <li>Pick the resource type (file, folder, project) for which you want to 
         change the decoration.</li>
       <li>Click in the decoration string for that resource type at the location 
-        where the new decoraction element should go.</li>
+        where the new decoration element should go.</li>
       <li>Click the <b>Add Variable</b> button for that resource type.</li>
       <li>Choose the CVS information variable to add. For instance, for files, 
         you could select the <i>added_flag</i> which will be inserted in the decoration 
@@ -54,7 +54,7 @@
   <li>Decorations can be removed by deleting the decoration variable name (i.e.<i> 
     {added_flag}</i>) from the decoration string. In a similar manner, spacing 
     can be added.</li>
-  <li>To configure icon decoartions, simply enbable/disable the icon checkboxes 
+  <li>To configure icon decorations, simply enbable/disable the icon checkboxes 
     at the bottom of the page.</li>
   <li>Click <b>OK</b> or <b>Apply</b> for the new decorations to take effect.</li>
 </ol>
