--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-110.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-110.htm
@@ -26,13 +26,13 @@
       open.
   </li>
   <li> 
-    <p CLASS="Intro"> In the top pane on the left (titled Browse files for tags), 
-      expand one or more projects to find a file that is know to have tags that 
+    <p CLASS="Intro"> In the top pane on the left (titled <i>Browse files for tags</i>), 
+      expand one or more projects to find a file that is known to have tags that 
       should be added to the CVS Repositories view. 
   </li>
   <li>Select a file in the left top pane. If the file selected has tags defined 
-    on it, they will be displayed in the right top pane (titled New tags found 
-    in selected files).</li>
+    on it, they will be displayed in the right top pane (titled <i>New tags found 
+    in selected files</i>).</li>
   <li>Check or uncheck the tags in the right pane as desired.</li>
   <li>Click <b>Add Checked Tags</b> to add the checked tags to the list of remembered 
     tags.</li>
