--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-113.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-113.htm
@@ -9,21 +9,22 @@
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head"> Updating</H1>
-<P CLASS="Para"> While you are working in the workbench, other members of your 
-  team may be committing changes to the branch you are working in (or HEAD). To 
+<P CLASS="Para"> While you are working on a project in the workbench, other members of your 
+  team may be committing changes to the copy of the project in the workbench. To 
   get these changes, you may &quot;update&quot; your workbench 
-  to match the state of the branch. You control when you choose to update.</P>
+  to match the state of the branch. The changes you will see will be specific to the
+  branch that your workbench project is configured to share.  You control when you choose to update.</P>
 <p>The update command can be issued from two places: the <b>Team &gt; Update</b> 
   menu, or the <b>Synchronize </b>view. </p>
 <p>If you update a file which has local uncommitted changes, CVS will attempt 
   to merge the changes of the remote file into your local file. This only occurs 
-  on files which CVS knows to contain text. </p>
-<p>When you select the <b>Update</b> action in the Synchronize View, you'll be 
+  on files which CVS knows to contain text (ie. ASCII). </p>
+<p>When you select the <b>Update</b> command in the Synchronize view, you'll be 
   prompted before a merge is attempted and asked if you want to auto merge the 
   contents or overwrite them with the repository file. By contrast, when you select 
   the <b>Team &gt; Update</b> action, no prompting will occur and those files 
   which can be merge will be merged. This matches the CVS commandline behavior.</p>
-<p>When synchronizing, you will see changes that have been released to the branch 
+<p>When synchronizing, you will see changes that have been committed to the branch 
   since you last updated. If you accept these incoming changes, they are incorporated 
   into your local workbench. If your local workbench contains any outgoing changes 
   that conflict with incoming changes from the branch, then you must merge the 
