--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-114.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-114.htm
@@ -12,7 +12,7 @@
 Committing</H1>
 <P CLASS="Intro"> You can commit workbench resources to the repository so that 
   other team members can see your work. Only those changes committed on that branch 
-  will be visible to others working on that branch.&nbsp; To commit changes: 
+  will be visible to others working on that branch.  To commit changes: 
 <ol>
   <li> 
     <p CLASS="Intro">In the Navigator view, select the resources that you want 
@@ -20,7 +20,7 @@ Committing</H1>
   </li>
   <li> 
     <p CLASS="Intro">Right-click to open the pop-up menu and select <b> Team &gt; 
-      Synchronize with Repository.</b> The Repository View will open. 
+      Synchronize with Repository.</b> The Synchronize view will open. 
   </li>
   <li> 
     <p CLASS="Intro">On the toolbar of the Synchronize 
@@ -30,10 +30,10 @@ Committing</H1>
   <li> 
     <p CLASS="Intro">If there are conflicts (red arrows), resolve them. Use the 
       text compare area to merge&nbsp; resources with conflicts. You can copy 
-      changes from the repository version of the resource to the workbench version 
-      of the resource and save the merged workbench resource.&nbsp; Once all the 
+      changes from the repository revision of the file to the workbench revision
+      of the file and save the merged workbench resource.  Once all the 
       conflicts in the Structure Compare area have been resolved, you are ready 
-      to commit.&nbsp;
+      to commit.
   </li>
   <li> 
     <p CLASS="Intro"> In the Structure Compare pane, right-click the top of the 
