--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-117a.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-117a.htm
@@ -19,7 +19,7 @@
     <p CLASS="Para"> In the Navigator view, select the project to be shared.
   </li>
   <li> 
-    <p CLASS="Para">Select <b>Team &gt;</b> <b>Share Project..</b>. from the project's 
+    <p CLASS="Para">Select <b>Team &gt;</b> <b>Share Project...</b> from the project's 
       pop-up menu. The Share Project wizard opens.
   </li>
   <li>From the list of available repository providers, choose <b>CVS</b> and click 
