--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-118.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-118.htm
@@ -33,24 +33,20 @@ Versioning projects in the repository</H1>
 
 
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="../concepts/concepts-27b.htm">
-Streams</a></p>
+<a href="../concepts/concepts-27b.htm">Branches</a>
+</p>
 
 
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="tasks-92.htm"><br>
-</a><a href="tasks-100.htm">
-Creating a version of a project</a><a href="tasks-118.htm"><br>
-</a>
-<a href="tasks-117.htm">
-Associating a project with a stream</a><a href="tasks-119.htm"><br>
-Viewing the history of a stream resource</a><a href="tasks-100a.htm"><br>
-</a><a href="tasks-115.htm">
-Synchronizing with a stream</a></p>
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+<a href="tasks-100.htm">Creating a version of a project</a><br>
+<a href="tasks-117.htm">Sharing a new project using CVS</a><br>
+<a href="tasks-119.htm">Viewing a File's Revision History</a><br>
+<a href="tasks-100a.htm">Branching</a>
+</p>
 
 
-<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><a href="../reference/ref-48b.htm"><br>
-Automatic version labeling schema</a><a href="../reference/ref-48c.htm"><br>
-CVS version label syntax rules</a>
+<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
+<a href="../reference/ref-48c.htm">CVS version label syntax rules</a>
 </p>
 
 <p>&nbsp;<br>
