--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-100a.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-100a.htm
@@ -10,7 +10,7 @@
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head"> Branching</H1>
 <P CLASS="Para">Creating a branch and releasing resources to that branch is useful 
-  in cases where you are not ready to put your code in the main codebase yet. 
+  in cases where you are not yet ready to put your changes in the main development flow. 
   It is also useful for creating incremental patches to existing versions.</P>
 <P CLASS="Para">To create a branch:</P>
 <ol>
@@ -29,23 +29,16 @@
   to merge your changes later on. It identifies the point at which the branch 
   was created.</p>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="../concepts/concepts-26.htm">Team programming</a> &nbsp;<a href="../concepts/concepts-27b.htm"><br>
-Streams</a><a href="../reference/ref-51a.htm"><br>
-</a><a href="../concepts/concepts-30.htm">
-Team synchronization</a>&nbsp;</p>
+<a href="../concepts/concepts-26.htm">Team programming with CVS</a><br>
+<a href="../concepts/concepts-27b.htm">Branches</a><br>
+<a href="../concepts/concepts-30.htm">Synchronizing with a CVS repository</a>
+</p>
 
 
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="tasks-92.htm"><br>
-</a><a href="tasks-96.htm">
-Adding resources from a repository to the workbench</a>&nbsp;<a href="tasks-103.htm"><br>
-Replacing resources with a repository
-        version</a><a href="tasks-111.htm"><br>
-Creating a new stream</a><a href="tasks-100a.htm"><br>
-Splitting from a stream</a><a href="tasks-115.htm"><br>
-Synchronizing with a stream</a><a href="tasks-113.htm"><br>
-Catching up</a><a href="tasks-113b.htm"><br>
-Resolving conflicts and merging changes</a><a href="tasks-100b.htm"><br>
-Merging from a stream</a>
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+<a href="tasks-111.htm">Defining a branch tag</a><br>
+<a href="tasks-115.htm">Synchronizing with the repository</a><br>
+<a href="tasks-100b.htm">Merging from a branch</a>
 </p>
 
 
