--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-103.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-103.htm
@@ -39,10 +39,10 @@ To replace workbench resources with versions in the repository:
 
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
 <br><a href="../concepts/concepts-26.htm">Team programming with CVS</a>
-<br><a href="../concepts/concepts-27c.htm">CVS Repositories</a>
 <br><a href="../concepts/concepts-27b.htm">Branches</a>
-<br><a href="../concepts/concepts-27.htm">Versions</a></p>
-
+<br><a href="../concepts/concepts-27.htm">Versions</a>
+<br><a href="../concepts/concepts-30.htm">Synchronizing with a CVS repository</a>
+</p>
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
 <br><a href="tasks-96.htm">Checking out a project from a CVS repository</a>
