--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-113b.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-113b.htm
@@ -13,26 +13,26 @@ Resolving conflicts </H1>
 <DIV CLASS="Topic">
   <P CLASS="Para"> When updating or committing you may encounter conflicts.&nbsp; 
     A conflict occurs when you have locally modified a resource for which a more 
-    recent revision is available in the branch.&nbsp;Specifically, the branch 
+    recent revision is available in the branch in the repository.  Specifically, the branch 
     will contain a revision newer than the base revision of your resource. In 
     this situation you can choose to do one of the following:</P>
 <ul>
   <li>
       <p CLASS="Para">You can take the change from the branch, discarding your 
         local work. This could occur if you have made unintended changes locally, 
-        or if you realize that the reversion in the branch is better than yours. 
+        or if you realize that the revision in the repository is better than yours. 
         Overwriting your local changes should be done with caution since you are 
         in essence throwing work out.
     </li>
   <li>
-      <p CLASS="Para">You can commit your change, overwriting the reversion in 
-        the branch. This should be done with great caution since you are in essence 
-        throwing away someone else's work.&nbsp; In particular, the change you 
+      <p CLASS="Para">You can commit your change, subsuming the revision in 
+        the repository. This should be done with great caution since you are in essence 
+        throwing away someone else's work.  In particular, the change you 
         are overwriting may have other dependencies in the branch (for example 
         there may be other incoming changes which depend on the conflict).
     </li>
   <li>
-      <p CLASS="Para">You can merge your work and the branch resource, saving 
+      <p CLASS="Para">You can merge your work and the repository resource, saving 
         locally the merged resource. You may then later choose to commit this 
         merged result.
     </li>
@@ -46,17 +46,17 @@ with the other two choices.</P>
     will want to merge your changes with changes in the branch's resource.</P>
   <P CLASS="Para">For example, let us assume that both you and another team member 
     have modified the same html page.&nbsp; Selecting that resource in the Synchronize 
-    view will display a comparison of the local resource and the branch reversion.&nbsp; 
-    By cycling through and merging the individual changes, you can decide for 
+    view will display a comparison of the local resource and the branch revision.  By
+    cycling through and merging the individual changes, you can decide for 
     each change whether to accept the incoming change, reject it, or merge it 
     with your local changes.&nbsp; When you are finished merging, you save your 
     changes. This overwrites your local resource with the result of the merge.&nbsp; 
     You can subsequently commit this merged resource.</P>
-  <P CLASS="Para">When merging changes, it is often convenient to be able to distinguish 
+  <P CLASS="Para"><b>Tip:</b> When merging changes, it is often convenient to be able to distinguish 
     which files you have completed merging. When you're done merging a file, you 
     can pick <b>Mark as Merged</b> from the context menu. This will change the 
     status of the file from being a conflict to being an outgoing change.</P>
-  <P CLASS="Para"> You can merge differences in the Synchronization View on two 
+  <P CLASS="Para"> You can merge differences in the Synchronization view on two 
     levels:&nbsp;</P>
   <ul>
     <li> 
@@ -78,38 +78,35 @@ with the other two choices.</P>
   </ul>
   <h2> <a name="AutoMergingChanges">Auto Merging Changes</a></h2>
   <p>It is also possible to have your changes automatically merged for you. For 
-    any resource marked as ASCII, performing a <b>Team&gt;Update</b> will automatically 
+    any resource marked as ASCII, performing a <b>Team &gt; Update</b> will automatically 
     merge into your local resource differences with the branch resource. This 
     works fine provided there are no lines with conflicting changes. If there 
     are, CVS inserts special markup in the file to indicate those lines which 
     could not be merged.</p>
-  <p>Updating from within the Synchronization View works a bit differently. In 
+  <p>Updating from within the Synchronization view works a bit differently. In 
     the case of a conflict, updating will prompt you to either emerge in the changes 
     or replace the entire file contents with those of the remote.</p>
 </DIV>
 <P>&nbsp;<img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="../concepts/concepts-26.htm">Team programming</a> &nbsp;<a href="../concepts/concepts-27c.htm"><br>
-</a><a href="../concepts/concepts-30.htm">
-Team synchronization</a>&nbsp;<br>
+<a href="../concepts/concepts-26.htm">Team programming with CVS</a><br>
+<a href="../concepts/concepts-30.htm">Synchronizing with a CVS repository</a><br>
 <a href="../concepts/concepts-31.htm">Comparison editors<br>
 </a><a href="../concepts/concepts-29.htm">Three-way comparisons</a>
 </P>
 
 
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="tasks-92.htm"><br>
-</a><a href="tasks-115.htm">
-Synchronizing with a stream</a><a href="tasks-113.htm"><br>
-Catching up</a><a href="tasks-100b.htm"><br>
-Merging from a stream</a><a href="tasks-114.htm"><br>
-Releasing resources to the stream<br>
-</a><a href="tasks-68.htm">Comparing resources</a>
-<a href="tasks-115.htm"><br>
-</a><a href="tasks-68dg.htm">Merging changes in the comparison editor</a>
- <a href="../concepts/concepts-17a.htm"><br>
-</a></p>
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+<a href="tasks-115.htm">Synchronizing with the repository</a><br>
+<a href="tasks-113.htm">Updating</a><br>
+<a href="tasks-114.htm">Committing<a><br>
+<a href="tasks-100b.htm">Merging</a><br>
+<a href="tasks-68.htm">Comparing resources</a><br>
+<a href="tasks-68dg.htm">Merging changes in the comparison editor</a>
+</p>
 
-<p>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
+<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
+<a href="http://www.cvshome.org/docs/manual/cvs_10.html#SEC85">www.cvshome.org: Bringing a file up to date</a><br>
+<a href="http://www.cvshome.org/docs/manual/cvs_10.html#SEC86">www.cvshome.org: Conflicts example</a>
 </p>
 
 </BODY>
