--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-119.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-119.htm
@@ -11,7 +11,7 @@
 <H1 CLASS="Head"> Viewing a File's Revision History</H1>
 <P CLASS="Para">Every time you commit a file to the CVS repository, a new revision 
   is created. Each revision is identified by a number (for example, 1.1 or 1.11.3.5). 
-  Along with each revision is stored the author, the date, and a release comment.</P>
+  Along with each revision is stored the author, the date, and a commit comment.</P>
 <P CLASS="Para">To view the resource history for a file:</P>
 <ol>
   <li>Select the file in the Navigator view. From the context menu, choose <b>Team 
@@ -25,24 +25,16 @@
   Resource History view instead of choosing the menu item.</p>
 <p><b>Tip:</b> By clicking on column headings in the CVS Resource History view 
   you can change the sorting order of the items.</p>
+
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="../concepts/concepts-26.htm">Team programming</a> &nbsp;<a href="../concepts/concepts-27b.htm"><br>
-Streams</a><a href="../reference/ref-51a.htm"><br>
-</a><a href="../concepts/concepts-30.htm">
-Team synchronization</a>&nbsp;</p>
+<a href="../concepts/concepts-26.htm">Team programming with CVS</a><br>
+<a href="../concepts/concepts-27b.htm">Branches</a><br>
+<a href="../concepts/concepts-30.htm">Synchronizing with a CVS repository</a>
+</p>
 
 
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="tasks-92.htm"><br>
-</a><a href="tasks-96.htm">
-Adding resources from a repository to the workbench</a>&nbsp;<a href="tasks-103.htm"><br>
-Replacing resources with a repository
-        version</a><a href="tasks-111.htm"><br>
-Creating a new stream</a><a href="tasks-100a.htm"><br>
-Splitting from a stream</a><a href="tasks-115.htm"><br>
-Synchronizing with a stream</a><a href="tasks-113.htm"><br>
-Catching up</a><a href="tasks-113b.htm"><br>
-Resolving conflicts and merging changes</a><a href="tasks-100b.htm"><br>
-Merging from a stream</a>
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+<a href="tasks-115.htm">Synchronizing with the repository</a><br>
 </p>
 
 
