proof read pass, corrected/reduced links

--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-105.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-105.htm
@@ -4,57 +4,49 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Changing team settings</title>
+<title>Changing CVS team settings</title>
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">
-Changing team settings</H1>
+Changing CVS team settings</H1>
 <P CLASS="Intro">
 
-You can customize the settings related to a number of team views and operations.
+You can customize the settings related to a number of CVS team views and operations.
 <ol>
   <li>
-    <p CLASS="Para">From the main menu bar, select <b>Workbench &gt; Preferences</b>.&nbsp;</li>
+    <p CLASS="Para">From the main menu bar, select <b>Window &gt; Preferences</b>.&nbsp;</li>
   <li>
     <p CLASS="Para">On the left side of the Preferences window, select the <b>Team</b>
     category.</li>
+  <li>
+    <p CLASS="Para">You will see a number of general <b>Team</b> options.  These options can be used
+    by any Eclipse integrated repository.  In our case, they are all applicable to CVS.
+  </li>
+  <li>
+    <p CLASS="Para">You will also see a <b>CVS</b> category.  Select it. You will see various
+    CVS options.  If you expand the <b>CVS</b> category, you will see additional CVS
+    preference pages.
+  </li>
 </ol>
-<p CLASS="Para">Here are some examples of settings that you can change:</p>
+<p CLASS="Para">Here are some examples of settings that you can change in the <b>CVS</b> section:</p>
 <ul>
   <li>
-    <p CLASS="Para">To change the initial version label for projects that are
-    versioned for the first time, type an alphanumeric label in the <b>Initial
-    version name</b> field.</li>
+    <p CLASS="Para">To filter out receiving empty directories when updating or synchronizing,
+    select the <b>Prune empty directories</b> toggle.</li>
   <li>
-    <p CLASS="Para">To change the prefix label that appears in the Navigator
-    view for outgoing changes, type an alphanumeric label in the <b>Label prefix
-    for outgoing changes</b> field. (The prefix is shown only if you have <b>Show
-    Version Info</b> selected in the Navigator view.)</li>
-  <li>
-    <p CLASS="Para">To switch to the Team perspective when a synchronization
-    operation is performed, select the <b>Switch to team perspective on catch
-    up/release</b> checkbox.</li>
-  <li>
-    <p CLASS="Para">If you want to be prompted for the location of projects
-    added to the workspace from a repository, select the <b>Prompt for a
-    location when adding projects from the repository</b> checkbox.</li>
+    <p CLASS="Para">To automatically save the contents of modified editors
+    prior to synchronize, commit, etc., choose <b>Auto-save</b>.
+  </li>
 </ul>
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><a href="../concepts/concepts-26.htm"><br>
-Team programming</a> &nbsp;<a href="../concepts/concepts-27.htm"><br>
-Resource versions</a>
+<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
+<a href="../concepts/concepts-26.htm">Team programming with CVS</a>
 </p>
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="tasks-96.htm"><br>
-Adding resources from a repository to the workbench</a>&nbsp;<a href="../concepts/concepts-30.htm"><br>
-Team synchronization</a>&nbsp;<a href="tasks-114.htm"><br>
-Releasing resources to the stream</a><a href="tasks-100.htm"><br>
-Creating a version of a project</a><a href="tasks-107b.htm"><br>
-Showing version information</a><a href="tasks-118.htm"><br>
-Versioning projects in the stream</a></p>
-<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27">
-&nbsp;<br>
-<a href="../reference/ref-48b.htm">Automatic version labeling schema</a><a href="../reference/ref-48c.htm"><br>
-CVS version label syntax rules</a></p>
+
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+<a href="tasks-115.htm">Synchronizing with the repository</a><br>
+<a href="tasks-114.htm">Committing</a>
+</p>
 
 <p>&nbsp;<br>
 <a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
