--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-119.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-119.htm
@@ -34,7 +34,7 @@
 
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-<a href="tasks-115.htm">Synchronizing with the repository</a><br>
+<a href="tasks-115.htm">Synchronizing with the repository</a>
 </p>
 
 
